tests/snapshots/conformance__n_structure_object_with_comment.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
{"a":/*comment*/"b"}
stdout --- 
<empty>
stderr --- 
error: unexpected character `/`. expected start of a json value
 --> stdin:1:6
  |
1 | {"a":/*comment*/"b"}
  |      ^
